--- a/package.json
+++ b/package.json
@@ -23,7 +23,9 @@
   },
   "homepage": "https://github.com/archetypesc/2jcie-ble-decode#readme",
   "dependencies": {
+    "advlib": "^0.1.4",
     "barnowl": "^1.1.0",
+    "barnowl-hci": "^0.2.1",
     "binary-parser": "^1.6.2",
     "events": "^3.1.0"
   }
